kubernetes/apps/security/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-and-local-ingress
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - host
        - remote-node
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: network
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: immich
      toPorts:
        - ports:
            - port: "9091"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "3890"
              protocol: TCP
  egress:
    - toEntities:
        - host
        - remote-node
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: security
      toPorts:
        - ports:
            - port: "3890"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "6379"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
